# Data-Migrator

Create-new-UUID-with-Name-Generator/: .gitignore  CMakeLists.txt  main.cc
develop2prefabs/input/Animation-of-Object-1st-2nd/: .manu  resource-pack.json
develop2prefabs/input/Animation-of-Object-1st-2nd/animations/: 73068203-233C-4C6E-A7D8-409D7934FD07.json  CA531AF5-E2FA-4664-A1C4-73226AD07580.json
develop2prefabs/input/Animation-of-Object-1st-2nd/colliders/: 33B9E2C5-5234-4C47-A493-625336206D0D.json  7F9FC17E-D1C4-4084-B122-A6220741C0BC.json
develop2prefabs/input/Animation-of-Object-1st-2nd/editor/: editor-resource-pack.json
develop2prefabs/input/Animation-of-Object-1st-2nd/materials/: 4D48F86D-ECE2-462D-8509-5CC70644CDBC.json
develop2prefabs/input/Animation-of-Object-1st-2nd/meshes/: 00F3BE50-1D02-41A3-8EA4-606D252343E2.json  8A6794ED-224D-4DA8-8733-6FA4A7920FF5.json
develop2prefabs/input/Animation-of-Object-1st-2nd/rigid-bodies/: 097ECC69-69D9-4D01-9B2A-0425C6757E1C.json  E375D8DC-9434-4F16-960F-A8618F435956.json
develop2prefabs/input/Animation-of-Object-1st-2nd/scenes/: 1C435217-1F56-4B14-B162-D5571841CD11.json
develop2prefabs/input/Animation-of-Object-1st-2nd/scripts/: 84A57701-C714-457B-AA50-F45A3F8E9C01.json  B8A30AAC-B397-4261-9077-CBBF4896BB35.json
develop2prefabs/input/Empty-Project/: .manu
develop2prefabs/input/Empty-Project/editor/: editor-resource-pack.json
develop2prefabs/input/Empty-Project/scenes/: 1C435217-1F56-4B14-B162-D5571841CD11.json
develop2prefabs/scripts/: .gitignore  test_new.py
(+4 files in other folders)
